=======
Changes
=======

0.2 (unreleased)
----------------

- Got rid of ``zope.app.form`` dependency by requiring at least
  ``zope.formlib`` 4.0.

- Got rid of ``zope.app.component`` dependency by requiring at least
  ``zope.component`` 3.8.


- Depending on ``zope.catalog`` instead of ``zope.app.catalog``.

- Depending on ``zope.security`` instead of ``zope.app.security``.

- Depending on ``zope.browserpage`` and ``zope.container`` instead of
  ``zope.app.publisher``.

- Got rid of the following dependencies:

  - ``zope.app.basicskin``
  - ``zope.app.securitypolicy``
  - ``zope.app.zapi``
  - ``zope.app.zcmlfiles``

- Fixed tests to run with ``zope.schema`` >= 3.6.

- Using Python's ``doctest`` module instead of depreacted
  ``zope.testing.doctest``.


0.1
---

- Exception views are now unicode aware. They used to break on translated
  content.

- Added use_default_for_not_selected to Union field to use default
  value even if sub field is not selected.