@@ -11,10 +11,13 @@ Changes
 - Got rid of ``zope.app.component`` dependency by requiring at least
   ``zope.component`` 3.8.
 
-
 - Depending on ``zope.catalog`` instead of ``zope.app.catalog``.
 
 - Depending on ``zope.security`` instead of ``zope.app.security``.
+
+- Depending on ``zope.app.wsgi`` >=3.7 instead of ``zope.app.testing`` for
+  test setup.
+
 
 - Depending on ``zope.browserpage`` and ``zope.container`` instead of
   ``zope.app.publisher``.
